--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -14,6 +14,7 @@ embedded-graphics = "0.7"
 
 # 工具库
 heapless = "0.7"
+common = { path = "../common", features = ["alloc-support"] }
 
 [dev-dependencies]
 
