--- a/drivers/Cargo.toml
+++ b/drivers/Cargo.toml
@@ -22,6 +22,7 @@ ssd1306 = "0.8"
 
 # 通信驱动
 bluer = "0.14"  # 蓝牙
+common = { path = "../common", features = ["alloc-support"] }
 
 [dev-dependencies]
 
